--- a/a1/package.json
+++ b/a1/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "express": "^4.17.1"
-  }
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1"
+  },
+  "main": "server.js"
 }
