--- a/a1/package.json
+++ b/a1/package.json
@@ -4,5 +4,11 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.1"
   },
-  "main": "server.js"
+  "main": "server.js",
+  "scripts": {
+    "watch": "nodemon server.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  }
 }
